# pokemon

./: CMakeLists.txt  README.md
enums/: PokemonType.cpp
include/: Pokemon.h  PokemonType.h  Trainer.h
includes/: Charmander.h  Pokemon.h  Trainer.h
includes/pokemons/: Bulbasaur.h  Squirtle.h
src/: Bulbasaur.cpp  Charmander.cpp  Pokemon.cpp  Squirtle.cpp  Trainer.cpp  main.cpp
src/pokemons/: Bulbasaur.cpp  Charmander.cpp  Squirtle.cpp
